feat: add sample

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 fastapi = "^0.111.0"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
 langchain = "^0.2.0"
+langchain-community = "^0.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
